<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_holder_selection"
    android:clickable="true"
    android:focusable="true"
    android:paddingLeft="@dimen/activity_list_horizontal_margin"
    android:paddingRight="@dimen/activity_list_horizontal_margin" >
	
    <ImageView
        android:id="@+id/contact_photo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/image_shape"
        android:contentDescription="@string/contact_icon"
        android:src="@drawable/contact_holder" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/contact_photo"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/contact_name"
            android:layout_width="wrap_content"
            android:fontFamily="source-sans-pro"
            android:layout_height="wrap_content"
            android:textColor="@color/contact_list_text"
            android:text="@string/jane_doe" />

        <TextView
            android:id="@+id/contact_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/_254_712_270_408"
            android:fontFamily="source-sans-pro"
            android:textColor="@color/contact_list_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true" >

        <ImageView
            android:id="@+id/contact_icon_flag"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginRight="8dp"
            android:clickable="true"
            android:contentDescription="@string/contact_flag"
            android:focusable="true"
            android:src="@drawable/list_icon_flag" />

        <ImageView
            android:id="@+id/contact_icon_watch"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginRight="8dp"
            android:clickable="true"
            android:contentDescription="@string/contact_watchlist"
            android:focusable="true"
            android:src="@drawable/list_icon_watch" />

        <ImageView
            android:id="@+id/contact_icon_more"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:clickable="true"
            android:contentDescription="@string/contact_more"
            android:focusable="true"
            android:src="@drawable/list_icon_more" />
    </LinearLayout>

</RelativeLayout>