<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_holder_selection"
    android:clickable="true"
    android:focusable="true" >

    <LinearLayout
        android:id="@+id/list_add_leads_linear_image"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="5dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/contact_photo"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:adjustViewBounds="true"
            android:maxWidth="96dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/contact_icon"
            android:scaleType="centerInside"
            android:src="@drawable/contact_holder" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/list_add_leads_linear_image"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/contact_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="source-sans-pro"
            android:text="@string/jane_doe"
            android:textColor="@color/contact_list_text" />

        <TextView
            android:id="@+id/contact_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:fontFamily="source-sans-pro"
            android:text="@string/_254_712_270_408"
            android:textColor="@color/contact_list_text" />
    </LinearLayout>

</RelativeLayout>