<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:background="@drawable/logged_in_shape" >

    <View
        android:id="@+id/vertical_sep"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="#adaeb1" />

    <TextView
        android:id="@+id/dialog_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vertical_sep"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/dialog_thanks"
        android:textColor="@color/login_btn_text"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_txt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/dialog_group_products"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="-2dp"
            android:layout_weight="0.5"
            android:background="@drawable/btn_dialog_products"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/group_products"
            android:textColor="@color/app_pure_white" />

        <TextView
            android:id="@+id/dialog_submit_lead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-2dp"
            android:layout_weight="0.5"
            android:background="@drawable/btn_dialog_lead"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/submit_another_lead"
            android:textColor="@color/app_pure_white" />
    </LinearLayout>

</RelativeLayout>