<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/leadroot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_app" >

    <RelativeLayout
        android:id="@+id/action_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1e4a9a" >
	
        <ImageView
                android:id="@+id/product_app_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="14dp"
                android:background="@drawable/new_holder_selector"
                android:src="@drawable/icon_back_arrow_line_40" />
        
        <TextView
            android:id="@+id/action_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:fontFamily="source-sans-pro"
            android:text="360 Me"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/app_pure_white" />

        <ImageView
            android:id="@+id/product_app_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="14dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/icon_chase_360_53" />
    </RelativeLayout>

    <View
        android:id="@+id/View02"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/action_layout"
        android:background="#adaeb1" />

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/View02"
        android:layout_gravity="bottom"
        android:background="#fcfcfc"
        android:orientation="horizontal"
        android:paddingTop="2dp" >

        <TextView
            android:id="@+id/lead_call_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:background="@drawable/lead_nav_selector"
            android:clickable="true"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/icon_lead_call_32_view"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:text="@string/call_now"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/login_btn_text"
            android:textSize="12sp" >
        </TextView>

        <View
            android:id="@+id/vertical_sep"
            android:layout_width="1dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:background="#c8cacc" />

        <TextView
            android:id="@+id/lead_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:background="@drawable/lead_nav_selector"
            android:clickable="true"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/icon_lead_reminder_32_view"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:text="@string/add_reminder"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/login_btn_text"
            android:textSize="12sp" >
        </TextView>

        <View
            android:id="@+id/View01"
            android:layout_width="1dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:background="#c8cacc" />

        <TextView
            android:id="@+id/lead_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:background="@drawable/lead_nav_selector"
            android:clickable="true"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/icon_lead_notes_32_view"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:text="@string/notes"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/login_btn_text"
            android:textSize="12sp" >
        </TextView>
    </LinearLayout>

    <View
        android:id="@+id/View05"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/LinearLayout1"
        android:background="#adaeb1" />

    <LinearLayout
        android:id="@+id/lead_person_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="16dp" >

        <ImageView
            android:id="@+id/contacts_photo"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@drawable/image_shape_lead"
            android:contentDescription="@string/contact_icon"
            android:padding="17dp"
            android:scaleType="centerCrop"
            android:src="@drawable/contact_holder" />

        <TextView
            android:id="@+id/contact_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/_254_712_270_408"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/login_btn_text" />

        <TextView
            android:id="@+id/contact_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:hint="joe@example.com"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/login_btn_text" />

        <Button
            android:id="@+id/btn_close_lead"
            android:layout_width="140dp"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/act_btn_login"
            android:paddingBottom="0dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="0dp"
            android:text="@string/close_lead"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/app_pure_white" />

        <View
            android:id="@+id/View03"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="#adaeb1" />

        <TextView
            android:id="@+id/lead_text_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="@string/you_have_a_reminder_set_for_2rd_may_at_15_00_hrs_"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/login_btn_text"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:background="#fcfcfc"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lead_section_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:background="@drawable/lead_nav_selector"
            android:clickable="true"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/tab_notifications_icon"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:text="@string/notification"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/login_btn_text"
            android:textSize="12sp" >
        </TextView>

        <View
            android:id="@+id/vertical_sep"
            android:layout_width="1dp"
            android:layout_height="45dp"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:background="#c8cacc" />

        <TextView
            android:id="@+id/lead_section_add_lead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:background="@drawable/lead_nav_selector"
            android:clickable="true"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/tab_add_lead_icon"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:text="@string/add_lead"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/notification_selected"
            android:textSize="12sp" >
        </TextView>

        <View
            android:id="@+id/View01"
            android:layout_width="1dp"
            android:layout_height="45dp"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:background="#c8cacc" />

        <TextView
            android:id="@+id/lead_section_my_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:background="@drawable/lead_nav_selector"
            android:clickable="true"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/tab_home_icon"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:text="HOME"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/login_btn_text"
            android:textSize="12sp" >
        </TextView>
    </LinearLayout>

</RelativeLayout>